--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,7 +6,9 @@
       "rootDir": "src",
       "strict": true,
       "esModuleInterop": true,
-      "allowSyntheticDefaultImports": true
+      "allowSyntheticDefaultImports": true,
+      "types": ["node"]
     },
     "include": ["src"]
+    
   }
